--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="fr">
 
 <head>
+  <style>
+    body {
+      background-color: #1D1F1F;
+    }
+  </style>
+
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/whatsapp.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
