--- a/index.html
+++ b/index.html
@@ -1094,6 +1094,13 @@
     </main>
   </div>
 
+
+  <body class="bg-body text-white h-screen overflow-hidden">
+  <div id="app"></div>
+  <script type="module" src="/src/router.js"></script>
+</body>
+
+
   <script type="module" src="/src/main.js"></script>
 </body>
 
