--- a/login.html
+++ b/login.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Connexion</title>
+  <link rel="icon" type="image/svg+xml" href="/whatsapp.svg" />
+
   <link href="/src/index.css" rel="stylesheet" />
 </head>
 <body class="bg-body text-white flex items-center justify-center h-screen  w-full">
