affichage de la page de chat ( homeView)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 </head>
 
 <body class="bg-body text-white h-screen overflow-hidden">
-  <div id="app" class="flex h-full">
-    
+  <div id="app" class="flex h-full"></div>
 
   <script type="module" src="/src/main.js"></script>
 </body>
